remove vsc/lcc deletion tests
Signed-off-by: David BRAQUART <david.braquart@rte-france.com>